no emperor dlc update

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -126,6 +126,46 @@
  TD_Imperial_Decree4_tooltip:0 "Bless Wars against enemies of the Empire"
  emperor_blessed_war:0 "Blessed Wars"
 
+
+ 
+ no_emperor_call_for_reform_title:0 "Call for Reform"
+ no_emperor_call_for_reform:0 "Call for Reform"
+ no_emperor_call_for_reform_emperor:0 "Call for Reform"
+ no_emperor_call_for_reform_desc:0 "The Empire is in desperate need of reformation.\n---"
+
+ no_emperor_reinforce_imperial_borders_title:0 "Reinforce Borders of The Empire" 
+ no_emperor_reinforce_imperial_borders:0 "Reinforced Borders of The Empire"
+ no_emperor_reinforce_imperial_borders_emperor_per_prince:0 "Reinforced Borders of The Empire"
+ no_emperor_reinforce_imperial_borders_desc:0 "The first step to securing stability of The Empire is to secure its borders.\n---\nUnlocks "§YFund Fortification construction§!" diplomatic action\n---"
+
+ no_emperor_unify_imperial_infrastructure_title:0 "Unify The Infrastructure"
+ no_emperor_unify_imperial_infrastructure:0 "Unified Infrastructure"
+ no_emperor_unify_imperial_infrastructure_desc:0 "Bringing The Empire closer economically will surely help its political situation.\n---\nUnlocks "§PExpand Via Caroli§!" decision\nUnlocks "§PExpand Via Magreini§!" decision\n---"
+ no_emperor_unify_imperial_infrastructure_province:0 "Unified Infrastructure" 
+
+ no_emperor_establish_permanent_parliament_title:0 "Establish Permanent Diet"
+ no_emperor_establish_permanent_parliament:0 "Permanent Diet Established"
+ no_emperor_establish_permanent_parliament_desc:0 "Permanent diet will make diplomacy inside The Empire much smoother.\n---\nUnlocks "§YImperial Palace§!" great project\n---\n"
+
+ no_emperor_revive_imperial_inquisition_title:0 "Revive Imperial Inquisition"
+ no_emperor_revive_imperial_inquisition:0 "Revived Imperial Inquisition"
+ no_emperor_revive_imperial_inquisition_desc:0 "Imperial Inquisition was once important organisation within The Empire, but now it has fallen into obscurity.\n---\nUnlocks "§PEnforce Unity of Faith§!" decision\nUnlocks "§YInvestigate Heresy§!" diplomatic action\n---\n"
+
+ no_emperor_establish_standing_army_title:0 "Establish Standing Army"
+ no_emperor_establish_standing_army:0 "Established Standing Army"
+ no_emperor_establish_standing_army_emperor_per_prince:0 "Established Standing Army"
+ no_emperor_establish_standing_army_desc:0 "If the Empire wants to reform into a modern state, it requires a modern army.\n---\n"
+
+ no_emperor_curtail_princely_power_title:0 "Curtain Princely Power"
+ no_emperor_curtail_princely_power:0 "Curtailed Princely Power"
+ no_emperor_curtail_princely_power_emperor:0 "Curtailed Princely Power"
+ no_emperor_curtail_princely_power_desc:0 "Imperial Unification is imminent. This step helps us secure our Empire against particularists.\n---\n"
+
+ no_emperor_unite_empire_title:0 "Unite The Empire"
+ no_emperor_unite_empire:0 "United The Empire"
+ no_emperor_unite_empire_desc:0 "Let the new Imperial Golden Age begin!\n---\n"
+ 
+
  incident_active:0 "Incident is Active"
  desc_incident_active:0 "Empire is too preoccupied with the internal incident to wage wars."
  incident_nevledian_succession:0 "Nevledian Succession"
