leave hre event

--- a/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
+++ b/localisation/TD_01_Flavour_Rah_jadid_l_english.yml
@@ -3,7 +3,7 @@
 
  isolationism_label_rah_jadid:0 "Cohesion"
 
- rah_jadid_isolationism_0_tt:0 "§YFrankrani Laws§!\nOfficial doctrines consist of original Ilumist and Frankrani beliefs with marginal syncretism.\n---\nThis is your current level of §YCohesion§!. It grants you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Cost of Advisors with Ruler's Religion:§G -10.0%\n Tolerance of Heathens:§R -1.00§!"
+ rah_jadid_isolationism_0_tt:0 "§YFrankrani Laws§!\nOfficial doctrines consist of original Ilumist and Frankrani beliefs with marginal syncretism.\n---\nThis is your current level of §YCohesion§!. It grants you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Cost of Advisors with Ruler's Religion:§G -10.0%§!\n Tolerance of Heathens:§R -2.00§!"
  rah_jadid_isolationism_0_ttb:0 "§YFrankrani Laws§!\nOfficial doctrines consist of original Ilumist and Frankrani beliefs with marginal syncretism.\n---\nIf you reach this level of §YCohesion§! it will grant you:\n\n Manpower in True Faith provinces:§G +10.0%§!\n Cost of Advisors with Ruler's Religion:§G -10.0%§!\n Tolerance of Heathens:§R -2.00§!"
 
  rah_jadid_isolationism_1_tt:0 "§YReligious Delamination§!\nRah Jadid and Uttarian religions are practiced in separate social classes with varying levels of syncretism.\n---\nThis is your current level of §YCohesion§!. It grants you:\n\n Production Efficiency:§G +10.0%§!\n Trade Efficiency:§G +10.0%§!\n Tolerance of Heathens:§R -1.00§!"
