--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -96,4 +96,9 @@
  liemarian.17.b:0 "Lend them money from our coffers"
  liemarian.17.c:0 "Do not help them"
 
+ liemarian.18.t:0 "Liemarianism and the Empire"
+ liemarian.18.desc:0 "After embracing the Liemarian doctrine, it has become obvious we can't be a part of the empire much longer due the religious barriers between us and our suzerain. We must finally accept our destiny."
+ liemarian.18.a:0 "We must forge our path alone"
+ liemarian.18.b:0 "We can't abandon the emperor."
+
  wirosepan_center_of_reformation:0 "Center of Restoration"
