--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -687,3 +687,60 @@
 
  north_gasihaean_area:0 "North Gasihaean"
  south_gasihaean_area:0 "South Gasihaean"
+
+ svatini_area:0 "Svatini"
+ sima_area:0 "Sima"
+ ghatiha_area:0 "Ghatiha"
+ uncai_area:0 "Uncai"
+ rastveltha_area:0 "Rastveltha"
+ pavniya_area:0 "Pavniya"
+ valrja_area:0 "Valrja"
+ pravekava_area:0 "Pravekava"
+ madbindu_area:0 "Madbindu"
+ khore_area:0 "Khore"
+ janma_area:0 "Janma"
+ phakta_area:0 "Phakta"
+ biyhara_area:0 "Biyhara"
+ medana_area:0 "Medana"
+ yaphari_area:0 "Yaphari"
+ orlara_area:0 "Orlara"
+ aghimi_area:0 "Aghimi"
+ skogce_area:0 "Skogce"
+ rtubai_area:0 "Rtubai"
+ mathumi_area:0 "Mathumi"
+ cauka_area:0 "Cauka"
+ sunya_area:0 "Sunya"
+ bdajig_area:0 "Badjig"
+ ceghan_area:0 "Ceghan"
+ mdulwa_area:0 "Mdulwa"
+ spyobai_area:0 "Spyobai"
+ naikalwa_area:0 "Naikalwa"
+ iratal_area:0 "Iratal"
+ kanakku_area:0 "Kanakku"
+ kataoram_area:0 "Kataoram"
+ panyana_area:0 "Panyana"
+ niltalam_area:0 "Niltalam"
+ erlakuti_area:0 "Erlakuti"
+ apaturam_area:0 "Apaturam"
+ mavatam_area:0 "Mavatam"
+ sikbodha_area:0 "Sikbodha"
+ jibdigi_area:0 "Jibdigi"
+ asuhini_area:0 "Asuhini"
+ samjistha_area:0 "Samjistha"
+ barabi_area:0 "Barabi"
+ niraikal_area:0 "Niraikal"
+ lutaiya_area:0 "Lutaiya"
+ cutnuri_area:0 "Cutnuri"
+ nivdena_area:0 "Nivdena"
+ ghasana_area:0 "Ghasana"
+ nirhona_area:0 "Nirhona"
+ ksehuri_area:0 "Ksehuri"
+ panmarga_area:0 "Panmarga"
+ daksina_area:0 "Daksina"
+ adpada_area:0 "Adpada"
+ latgata_area:0 "Latgata"
+ adhpara_area:0 "Adhpara"
+ alopahua_area:0 "Alopahua"
+ pracdisa_area:0 "Pracdisa"
+ dheiya_area:0 "Dheiya"
+ 
