--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -285,6 +285,36 @@
  otigari_rebels_army:0 "$RELIGION$ Army"
  otigari_rebels_demand:0 "Convert $COUNTRYNAME$"
 
+ nallavul:0 "Nallavul"
+ nallavul_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ nallavul_rebels_title:0 "Religious"
+ nallavul_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ nallavul_rebels_army:0 "$RELIGION$ Army"
+ nallavul_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ desjaniti:0 "Desjaniti"
+ desjaniti_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ desjaniti_rebels_title:0 "Religious"
+ desjaniti_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ desjaniti_rebels_army:0 "$RELIGION$ Army"
+ desjaniti_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ bhajsaya:0 "Bhajsaya"
+ bhajsaya_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ bhajsaya_rebels_title:0 "Religious"
+ bhajsaya_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ bhajsaya_rebels_army:0 "$RELIGION$ Army"
+ bhajsaya_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ ayuhuro:0 "Ayuhuro"
+ ayuhuro_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ ayuhuro_rebels_title:0 "Religious"
+ ayuhuro_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ ayuhuro_rebels_army:0 "$RELIGION$ Army"
+ ayuhuro_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+
+
 
  hengtuan:0 "Hengtuan"
 
