Samadian group religious rebels
with estate scripted effects and localized names.

--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -19,6 +19,11 @@
  uttarian_rebels_name:0 "Uttarian Rebels"
  kausali_rebels_name:0 "Kausali Rebels"
  samgharsahi_rebels_name:0 "Samgharsahi Rebels"
+ otigari_rebels_name:0 "Otigari Rebels"
+ nallavul_rebels_name:0 "Nallavul Rebels"
+ desjaniti_rebels_name:0 "Desjaniti Rebels"
+ bhajsaya_rebels_name:0 "Bhajsaya Rebels"
+ ayuhuro_rebels_name:0 "Ayuhuro Rebels"
  itonatilu_rebels_name:0 "Itonatilu Rebels"
  lummak_mythology_rebels_name:0 "Lummak Mythology Rebels"
  orundes_rebels_name:0 "Orundes Rebels"
