old missing rebels

--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -30,3 +30,11 @@
  tanagan_rebels_name:0 "Tanagan Rebels"
  chantlian_pantheon_rebels_name:0 "Chantlian Pantheon Rebels"
  sointuva_rebels_name:0 "Sointuva Rebels"
+ achiqnay_rebels_name:0 "Achiqnay Rebels"
+ agellidian_rebels_name:0 "Agellidian Rebels"
+ gajifeng_spiritualism_rebels_name:0 "Gajifeng Spiritualism Rebels"
+ khutigar_shamanism_rebels_name:0 "Khutigar Shamanism Rebels"
+ wirosepan_rebels_name:0 "Wirosepan Rebels"
+ xianga_rebels_name:0 "Xianga Rebels"
+ xifang_rebels_name:0 "Xifang Rebels"
+ zimahei_cult_rebels_name:0 "Zimahei Cult Rebels"
