--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -43,9 +43,19 @@
 
  agellidian:0 "Agellidian"
  agellidian_religion_desc:0 "Idea of this faith was sparked by 15th century Altaciman poet and philosopher Ali Ibn Sumayya Agellid Al-Altaqadim who proposed that the Emperor Saelius was one of the Yaltazim prophets and his word should be treated as such. This belief became especially popular amongst the urban population in Novoregno between XVI and XVII centuries and, with the growing influence of Liemarianism, became state religilon."
+ agellidian_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ agellidian_rebels_title:0 "Religious"
+ agellidian_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ agellidian_rebels_army:0 "$RELIGION$ Army"
+ agellidian_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  wirosepan:0 "Wirosepan"
  wirosepan_religion_desc:0 "When the Saelian missionaries reached the Dorchean isles they had to take a new approach to their mission. They presented the Emperor Saelius as a god-like and omnipotent figure of a brave warrior seeking to establish his realm on earth. This idea quickly spread  even without the need of missionaries, but some time after the popularization of Universalist ideals in the isles it became a dying faith with little prospect of survival - unless someone shook the very foundation of Saelian church."
+ wirosepan_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ wirosepan_rebels_title:0 "Religious"
+ wirosepan_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ wirosepan_rebels_army:0 "$RELIGION$ Army"
+ wirosepan_rebels_demand:0 "Convert $COUNTRYNAME$"
 
 
 
@@ -116,6 +126,11 @@
 
  khutigar_shamanism:0 "Khutigar Shamanism"
  mulojagi:0 "Mulojagi"
+ khutigar_shamanism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ khutigar_shamanism_rebels_title:0 "Religious"
+ khutigar_shamanism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ khutigar_shamanism_rebels_army:0 "$RELIGION$ Army"
+ khutigar_shamanism_rebels_demand:0 "Convert $COUNTRYNAME$"
 
 
 
@@ -240,7 +255,11 @@
  lummak_mythology_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  achiqnay:0 "Achiqnay"
-
+ achiqnay_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ achiqnay_rebels_title:0 "Religious"
+ achiqnay_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ achiqnay_rebels_army:0 "$RELIGION$ Army"
+ achiqnay_rebels_demand:0 "Convert $COUNTRYNAME$"
 
 
 
