--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -2,6 +2,8 @@
  consolidate_the_steppe:0 "Consolidate the Steppe"
  desc_consolidate_the_steppe:0 "Our horde has ambitions to unite the entire steppe."
  settlers_pushed_back:0 "Settlers Pushed Back"
+ 
+ CB_ALLOWED_po_push_back_colonizers_taedium:0 "Push Back Colonizers"
 
  lounavaki_march_ideas:0 "Valvur Ideas"
  lounavaki_march_ideas_start:0 "Valvur Traditions"
