--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -297,3 +297,8 @@
  saelian.12.a:0 "The Empire is back to its rightful owners."
  de_seliana_legacy_of_saelius:0 "Legacy of Saelius"
  desc_de_seliana_legacy_of_saelius:0 "[Root.Monarch.GetName] sees himself as a descendant of Imperator Vicarius Saelius."
+
+ TETRARCHATE:0 "Tetrarchate"
+ TETRARCH:0 "Tetrarch"
+ council_of_tetrarchs_reform:0 "Council of Tetrarchs"
+ council_of_tetrarchs_reform_desc:0 "After abolishing the idea of elected Emperor, the tetrarchs seized control over the Saelian Empire."
