stuff and fixez

--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -418,7 +418,7 @@
  meyalama:0 "Meyalama"
  
  nacaksu_group:0 "Nacaksu"
- paratunu:0 "Pratunu"
+ pratunu:0 "Pratunu"
 
  kacskyin_group:0 "Kacskyin"
  dkrolpulta:0 "Dkrolpulta"
