--- a/localisation/TD_unit_names_l_english.yml
+++ b/localisation/TD_unit_names_l_english.yml
@@ -1,8 +1,23 @@
 ﻿l_english:
- #saelian
- #kakigian
- #nomad
- #
+	#Saelian (Western)
+
+	#Kakigian (Eastern)
+
+	#Yermic (Muslim)
+
+	#Hestani (Ottoman)
+
+	#Nomadic
+
+	#Samadian (Indian)
+
+	#Hengtuan (Chinese)
+
+	#Wasichantlian (Mesoamerican)
+
+	#Chantlian (North American)
+
+	#Topomundi (Andean)
  native_indian_horsemen:0 "North American Horsemen"
  native_indian_horsemenDESCR:0 "The arrival of horses following the European involvement also changed Native American warfare. Many tribes adopted the horse as an important part of their culture, and became excellent horsemen."
  central_american_horsemen:0 "Central American Horsemen"
