--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -302,3 +302,5 @@
  TETRARCH:0 "Tetrarch"
  council_of_tetrarchs_reform:0 "Council of Tetrarchs"
  council_of_tetrarchs_reform_desc:0 "After abolishing the idea of elected Emperor, the tetrarchs seized control over the Saelian Empire."
+
+ ONLY_SIGILIAN:0 "£no£ Only Sigilian nations can join the Empire."
