--- a/localisation/TD_01_flavour_pohjoismaa_l_english.yml
+++ b/localisation/TD_01_flavour_pohjoismaa_l_english.yml
@@ -32,6 +32,8 @@
  lou_dominion_over_the_steppe_desc:0 "As we reach deeper and deeper into Kakigia, also known by our settlers as Idamaa, we become much more integrated with local people and in turn local population learns about the wonders of civilization."
  lou_steppe_domination:0 "Steppe Domination"
  desc_lou_steppe_domination:0 "We tamed untameable - The steppe is ours."
+ IDAMAAN_EMPIRE:0 "Idamaan Empire"
+ IDAMAAN_EMPIRE_ADJ:0 "Idamaan"
 
  group_indriger_ideas:0 "Indriger Minor Ideas"
  group_indriger_ideas_bonus:0 "Indriger Minor Ambition"
