--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -121,3 +121,21 @@
 
  pistoleros_reform:0 "Pistoleros"
  pistoleros_reform_desc:0 "Early adoption of blackpowder weaponry in the military allowed us to gain advantage over our enemies."
+
+ rouvian_ideas:0 "Rouvian Ideas"
+ rouvian_ideas_bonus:0 "Rouvian Ambition"
+ rouvian_ideas_start:0 "Rouvian Traditions"
+ rouvia_ancient_people:0 "Ancient People"
+ rouvia_ancient_people_desc:0 "The Aqerbic peninsula has been populated by Labosians for millenia and some of the oldest of our stories relate to these hills and forests. Even when we are merely a shell of our former selves, our culture will survive for ages to come."
+ rouvia_rouvian_shipmaking:0 "Rouvian Shipmaking"
+ rouvia_rouvian_shipmaking_desc:0 "High quality timber and connections to other seafearing nations were a major influence on our sailing culture, leading to many innovations in shipmaking."
+ rouvia_new_book_of_laws:0 "New Book of Laws"
+ rouvia_new_book_of_laws_desc:0 "Based on the ancient Book of Laws composed by the half-legendary ruler Ambón, compiles all common and written laws of Rouvia into one place."
+ rouvia_fight_off_the_invaders:0 "Fight off the Invaders"
+ rouvia_fight_off_the_invaders_desc:0 "Long history of opression and colonisation hardened our citizens and our poets made them nostalgic for the olden days of glory - one of the more famous tragedies tells a story from the time of Rouvian-Saelian wars in order to critique our mistakes and path a better way forward."
+ rouvia_search_for_galodia:0 "Search for Galodia"
+ rouvia_search_for_galodia_desc:0 "Galodia is a mystical island across the western ocean, known across the Labosian sphere under different names. Many believe that riches of this magical land can wastly improve our situation."
+ rouvia_forgotten_claims:0 "Forgotten Claims"
+ rouvia_forgotten_claims_desc:0 "We are not the only people slowly vanishing from history - both Gyrdians and Glasians were or are being conquered by Silvestrians. We can justify our wars simply by reminding people that all these lands were once Labosian and we are simply reconquering it."
+ rouvia_crossroad_of_cultures:0 "Crossroad of Cultures"
+ rouvia_crossroad_of_cultures_desc:0 "Despite most of our population being often fearful of outsiders, many traders and noblemen maintain contacts with variety of peoples around the world and they often serve as a middleman between Acerbics, Yermics and Silvestrians."
