--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -130,3 +130,6 @@
 
  shuuduragis_nation_title:0 "Reunite Shüüduraga @SHD"
  shuuduragis_nation_desc:0 "After Atkiray Khan split the eastern realm between himself and his brother, many we sure that this state would return some semblance of stability, but only true unity can bring us glory and prosperity."
+
+ raxasa_nation_title:0 "Unite Raxasa @RAX"
+ raxasa_nation_desc:0 "Disunited coast of Anjafrah needs a single ruler to prosper in these turbulent times." 
