--- a/localisation/TD_01_Flavour_Uttarian_l_english.yml
+++ b/localisation/TD_01_Flavour_Uttarian_l_english.yml
@@ -4,3 +4,5 @@
  embrace_ehsanism_desc:0 "Many believe that Ehšan Tiri will finally bring unity to the Uttarian faith. We should embrace his teaching to further this goal."
  ehsani_sect:0 "Ehšanism"
  desc_ehsani_sect:0 "The Ehšani doctrines are spread far and wide in our nation."
+
+ isolationism_at_least_9_tt:0 "Cohesion level is §YNaršehanism§!."
