--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -125,7 +125,7 @@
  sointuva_rebels_demand:0 "Convert $COUNTRYNAME$"
 
  khutigar_shamanism:0 "Khutigar Shamanism"
- mulojagi:0 "Mulojagi"
+ merhaan:0 "Merhaani"
  khutigar_shamanism_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
  khutigar_shamanism_rebels_title:0 "Religious"
  khutigar_shamanism_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
@@ -266,7 +266,7 @@
 
 
 
- mulojag:0 "Mulojag"
+ merhaan:0 "Merhaan"
 
  tanagan:0 "Tanagan"
  tanagan_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
