--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -282,6 +282,27 @@
  orundes_rebels_army:0 "$RELIGION$ Army"
  orundes_rebels_demand:0 "Convert $COUNTRYNAME$"
 
+ navch:0 "Navch"
+ navch_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ navch_rebels_title:0 "Religious"
+ navch_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ navch_rebels_army:0 "$RELIGION$ Army"
+ navch_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ khondii:0 "Khondii"
+ khondii_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ khondii_rebels_title:0 "Religious"
+ khondii_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ khondii_rebels_army:0 "$RELIGION$ Army"
+ khondii_rebels_demand:0 "Convert $COUNTRYNAME$"
+
+ salbar:0 "Salbar"
+ orundes_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ salbar_rebels_title:0 "Religious"
+ salbar_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ salbar_rebels_army:0 "$RELIGION$ Army"
+ salbar_rebels_demand:0 "Convert $COUNTRYNAME$"
+
 
 
 
