ehren colonial names

--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -8,6 +8,8 @@
  COLONIAL_Kamanechland:0 "Kamanechlander"
  COLONIAL_new_dorchia:0 "New Dorchia"
  COLONIAL_new_dorchia_ADJ:0 "New Dorchean"
+ COLONIAL_wetterland:0 "Wetterland"
+ COLONIAL_wetterland_ADJ:0 "Wetterlander"
  COLONIAL_Root_Culture_GetName_tonatiqan:0 "[Root.GetAdjective] Tonatiqan"
  COLONIAL_Root_Culture_GetName_tonatiqan_ADJ:0 "[Root.GetAdjective] Tonatiqani"
 
@@ -18,6 +20,8 @@
  COLONIAL_cosgainimh_ADJ:0 "Cosgainimhian"
  COLONIAL_panpaland:0 "Panpaland"
  COLONIAL_panpaland_ADJ:0 "Panpalander"
+ COLONIAL_regland:0 "Regland"
+ COLONIAL_regland_ADJ:0 "Regland"
  COLONIAL_Root_Culture_GetName_panpallpa:0 "[Root.GetAdjective] Panpallpa"
  COLONIAL_Root_Culture_GetName_panpallpa_ADJ:0 "[Root.GetAdjective] Panpallpan"
 
@@ -34,6 +38,8 @@
  COLONIAL_achicnatir_ADJ:0 "Achicnatiren"
  COLONIAL_koniginland:0 "Königinland"
  COLONIAL_koniginland_ADJ:0 "Königinlander"
+ COLONIAL_grunkuste:0 "Grunkuste"
+ COLONIAL_grunkuste_ADJ:0 "Grunkusten"
  COLONIAL_Root_Culture_GetName_ardwajdi:0 "[Root.GetAdjective] Ardwajda"
  COLONIAL_Root_Culture_GetName_ardwajdi_ADJ:0 "[Root.GetAdjective] Ardwajdan"
 
@@ -60,6 +66,8 @@
  COLONIAL_new_salia_ADJ:0 "New Salian"
  COLONIAL_new_argenia:0 "New Argenia"
  COLONIAL_new_argenia_ADJ:0 "Argenian"
+ COLONIAL_Hahnoff:0 "Hahnoff"
+ COLONIAL_Hahnoff_ADJ:0 "Hahnoffian"
  COLONIAL_Root_Culture_GetName_talamgalt:0 "[Root.GetAdjective] Talamgalt"
  COLONIAL_Root_Culture_GetName_talamgalt_ADJ:0 "[Root.GetAdjective] Talamgalter"
  
@@ -72,6 +80,8 @@
  COLONIAL_neumark_ADJ:0 "Neumarker"
  COLONIAL_ravdnjesveahkki:0 "Ravdnjesveahkki"
  COLONIAL_ravdnjesveahkki_ADJ:0 "Ravdnjesveahkkian"
+ COLONIAL_neu_noordenia:0 "Neu-Noordenia"
+ COLONIAL_neu_noordenia_ADJ:0 "Neu-Noordenian"
  COLONIAL_Root_Culture_GetName_tarhia:0 "[Root.GetAdjective] Tarhia"
  COLONIAL_Root_Culture_GetName_tarhia_ADJ:0 "[Root.GetAdjective] Tarhian"
 
@@ -80,6 +90,8 @@
  COLONIAL_moorflussland_ADJ:0 "Moorflusslander"
  COLONIAL_Talamhlachan:0 "Talamhlachan"
  COLONIAL_Talamhlachan_ADJ:0 "Talamhlachanian"
+ COLONIAL_mittethal:0 "Mittethal"
+ COLONIAL_mittethal_ADJ:0 "Mittethaler"
  COLONIAL_Root_Culture_GetName_moorfluss:0 "[Root.GetAdjective] Moorfluss"
  COLONIAL_Root_Culture_GetName_moorfluss_ADJ:0 "[Root.GetAdjective] Moorflusser"
 
@@ -90,6 +102,8 @@
  COLONIAL_new_oileamer_ADJ:0 "Oileamerian"
  COLONIAL_new_stadacona:0 "New Stadacona"
  COLONIAL_new_stadacona_ADJ:0 "Stadaconan"
+ COLONIAL_gross_himmelkanal:0 "Gross Himmelkanal"
+ COLONIAL_gross_himmelkanal_ADJ:0 "Gross Himmelkanalan"
  COLONIAL_Root_Culture_GetName_qarabil:0 "[Root.GetAdjective] Qarabil"
  COLONIAL_Root_Culture_GetName_qarabil_ADJ:0 "[Root.GetAdjective] Qarabili"
 
@@ -102,10 +116,14 @@
  COLONIAL_talamhath_ADJ:0 "Talamhath"
  COLONIAL_helthonland:0 "Helthonland"
  COLONIAL_helthonland_ADJ:0 "Helthonlander"
+ COLONIAL_sudland:0 "Sudland"
+ COLONIAL_sudland_ADJ:0 "Sudlander"
  COLONIAL_Root_Culture_GetName_radoriasa:0 "[Root.GetAdjective] Radoriasa"
  COLONIAL_Root_Culture_GetName_radoriasa_ADJ:0 "[Root.GetAdjective] Radoriasan"
 
  colonial_secesa:0 "Colonial Secesa"
+ COLONIAL_krebdt:0 "Krebdt"
+ COLONIAL_krebdt_ADJ:0 "Krebdt"
  COLONIAL_Root_Culture_GetName_secesa:0 "[Root.GetAdjective] Secesa"
  COLONIAL_Root_Culture_GetName_secesa_ADJ:0 "[Root.GetAdjective] Secesan"
  
@@ -114,6 +132,8 @@
  COLONIAL_thiara_ADJ:0 "Thiaran"
  COLONIAL_quchland:0 "Quchland"
  COLONIAL_quchland_ADJ:0 "Quchlander"
+ COLONIAL_tobimuth:0 "Tobimuth"
+ COLONIAL_tobimuth_ADJ:0 "Tobimuthi"
  COLONIAL_Root_Culture_GetName_blawenn:0 "[Root.GetAdjective] Blawenn"
  COLONIAL_Root_Culture_GetName_blawenn_ADJ:0 "[Root.GetAdjective] Blawennian"
 
@@ -124,5 +144,7 @@
  COLONIAL_ashmordland_custom_ADJ:0 "Ashmorlish"
  COLONIAL_new_abendohn:0 "New Abendohn"
  COLONIAL_new_abendohn_ADJ:0 "Abendohner"
+ COLONIAL_kaltwald:0 "Kaltwald"
+ COLONIAL_kaltwald_ADJ:0 "Kaltwaldian"
  COLONIAL_Root_Culture_GetName_ashmorland:0 "[Root.GetAdjective] Ashmorland"
  COLONIAL_Root_Culture_GetName_ashmorland_ADJ:0 "[Root.GetAdjective] Ashmorlish"
