--- a/localisation/TD_religion_l_english.yml
+++ b/localisation/TD_religion_l_english.yml
@@ -303,6 +303,13 @@
  salbar_rebels_army:0 "$RELIGION$ Army"
  salbar_rebels_demand:0 "Convert $COUNTRYNAME$"
 
+ ovogsteg:0 "Ovogsteg"
+ orundes_rebels_demand_desc:0 "The religious rebels fight for the $RELIGION$ religion. They demand that we recognize its supremacy or at the very least cease our efforts to convert them and let them worship in peace."
+ ovogsteg_rebels_title:0 "Religious"
+ ovogsteg_rebels_desc:0 "Religious fanatics tend to rise up in provinces controlled by nations of a different faith. They seek to spread their faith and smite all unbelievers."
+ ovogsteg_rebels_army:0 "$RELIGION$ Army"
+ ovogsteg_rebels_demand:0 "Convert $COUNTRYNAME$"
+
 
 
 
