Merhaan Religions Rebels
I didn't test it, so minor mistakes with localization are possible.

--- a/localisation/TD_rebels_l_english.yml
+++ b/localisation/TD_rebels_l_english.yml
@@ -28,6 +28,10 @@
  lummak_mythology_rebels_name:0 "Lummak Mythology Rebels"
  orundes_rebels_name:0 "Orundes Rebels"
  tanagan_rebels_name:0 "Tanagan Rebels"
+ khondii_rebels_name:0 "Khondii Rebels"
+ navch_rebels_name:0 "Navch Rebels"
+ salbar_rebels_name:0 "Salbar Rebels"
+ ovogsteg_rebels_name:0 "Ovogsteg Rebels"
  chantlian_pantheon_rebels_name:0 "Chantlian Pantheon Rebels"
  sointuva_rebels_name:0 "Sointuva Rebels"
  achiqnay_rebels_name:0 "Achiqnay Rebels"
