--- a/localisation/TD_great_projects_l_english.yml
+++ b/localisation/TD_great_projects_l_english.yml
@@ -11,6 +11,7 @@
  province_is_or_accepts_itonatilu_tt:0 "The Religion of §Y[Root.GetName]§! is §YItonatilu§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_lummak_mythologyi_tt:0 "The Religion of §Y[Root.GetName]§! is §YLummak Mythology§! and is either the State or the Syncretic Religion of the owner."
  province_is_or_accepts_hengtuan_tt:0 "The Religion of §Y[Root.GetName]§! is §YHengtuan§! and is either the State or the Syncretic Religion of the owner."
+ province_is_or_accepts_merhaan_tt:0 "The Religion of §Y[Root.GetName]§! is §YMerhaan§! and is either the State or the Syncretic Religion of the owner."
 
  matliman_canal:0 "Matliman Canal"
  barzakhan_canal:0 "Barzakhan Canal"
@@ -121,3 +122,6 @@
  
  shaantin_mountain:0 "Mount Shaantin"
  shaantin_mountain_desc:0 " "
+ 
+ ancient_merhaan_site:0 "Anciet Merhaan Site"
+ ancient_merhaan_site_desc:0 "According to the Merhaan faiths, this is the place where the great Merhaan tree used to be. Now, the headquaters for all Bunelisuli philosophers is located here."
