--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -28,5 +28,38 @@
  merhaan.6.desc:0 "After our church collapsed because of lack of support, many people were thinking that we would just give up and decide that it isn't worth it. But today we stand victorious above them, our faith is more united than ever and there are no signs that it will ever collapse. Now we can show this wisdom to everyone, not only merhaani people will know about our ways.\n\nNow you can harmonize different faiths."
  merhaan.6.a:0 "United at last"
 
+ merhaan.7.t:0 "Church disunited in teachings"
+ merhaan.7.desc:0 "We started to assimilate another religion that doesn't have anything common with our faith. Many shamans are now in disarray and don't know what to do, they also try to convince us that we should first focus on bringing our brothers and sisters to enlightenment before we try to teach others."
+ merhaan.7.a:0 "Okay"
+
+ merhaan.8.t:0 "Shamans united"
+ merhaan.8.desc:0 "By stopping our attempts to assimilate other faiths we united shamans once again."
+ merhaan.8.a:0 "Okay"
+
+ merhaan.9:t:0 "Tanagan Shamans Arrive"
+ merhaan.9.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
+ merhaan.9.a:0 "Let them stay"
+ merhaan.9.b:0 "Kick them out"
+
+ merhaan.10:t:0 "Orundes Shamans Arrive"
+ merhaan.10.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
+ merhaan.10.a:0 "Let them stay"
+ merhaan.10.b:0 "Kick them out"
+
+ merhaan.11:t:0 "Navch Shamans Arrive"
+ merhaan.11.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
+ merhaan.11.a:0 "Let them stay"
+ merhaan.11.b:0 "Kick them out"
+
+ merhaan.12:t:0 "Khondii Shamans Arrive"
+ merhaan.12.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
+ merhaan.12.a:0 "Let them stay"
+ merhaan.12.b:0 "Kick them out"
+
+ merhaan.13:t:0 "Salbar Shamans Arrive"
+ merhaan.13.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
+ merhaan.13.a:0 "Let them stay"
+ merhaan.13.b:0 "Kick them out"
+
 
 
