--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -61,5 +61,19 @@
  merhaan.13.a:0 "Let them stay"
  merhaan.13.b:0 "Kick them out"
 
+ merhaan.101.t:0 "Shamans request local autonomy"
+ merhaan.101.desc:0 "They argue that giving autonomy to local population with allow them to better understand their faith. We can give it to them which will speed up process of assimilation or we can decline."
+ merhaan.101.a:0 "Give them autonomy"
+ merhaan.101.b:0 "Don't grant it"
+
+ merhaan.102.t:0 "Great Theologian"
+ merhaan.102.desc:0 "Shamans decided to send us local theologian and try to convince us that his skills are needed for the state. We can accept him but we can also send him back which will bring higher stability to court."
+ merhaan.102.a:0 "Hire him"
+ merhaan.102.b:0 "Send him back"
+
+ merhaan.103.t:0 "Traditions in court"
+ merhaan.103.desc:0 "Some of people in our court started to practice foreign traditions. Allowing them continue will make our state more open to different ways of thinking thus speeding up assimilation but it will make our nation less prestigious."
+ merhaan.103.a:0 "Allow them to continue"
+ merhaan.103.b:0 "Ban them"
 
 
