--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -36,27 +36,27 @@
  merhaan.8.desc:0 "By stopping our attempts to assimilate other faiths we united shamans once again."
  merhaan.8.a:0 "Okay"
 
- merhaan.9:t:0 "Tanagan Shamans Arrive"
+ merhaan.9.t:0 "Tanagan Shamans Arrive"
  merhaan.9.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
  merhaan.9.a:0 "Let them stay"
  merhaan.9.b:0 "Kick them out"
 
- merhaan.10:t:0 "Orundes Shamans Arrive"
+ merhaan.10.t:0 "Orundes Shamans Arrive"
  merhaan.10.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
  merhaan.10.a:0 "Let them stay"
  merhaan.10.b:0 "Kick them out"
 
- merhaan.11:t:0 "Navch Shamans Arrive"
+ merhaan.11.t:0 "Navch Shamans Arrive"
  merhaan.11.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
  merhaan.11.a:0 "Let them stay"
  merhaan.11.b:0 "Kick them out"
 
- merhaan.12:t:0 "Khondii Shamans Arrive"
+ merhaan.12.t:0 "Khondii Shamans Arrive"
  merhaan.12.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
  merhaan.12.a:0 "Let them stay"
  merhaan.12.b:0 "Kick them out"
 
- merhaan.13:t:0 "Salbar Shamans Arrive"
+ merhaan.13.t:0 "Salbar Shamans Arrive"
  merhaan.13.desc:0 "Interested by our church they decided to arrive here, now should we allow them to settle here and spread their religion or kick them out?"
  merhaan.13.a:0 "Let them stay"
  merhaan.13.b:0 "Kick them out"
