Salia formable + ideas

--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -133,3 +133,7 @@
 
  raxasa_nation_title:0 "Unite Raxasa @RAX"
  raxasa_nation_desc:0 "Disunited coast of Anjafrah needs a single ruler to prosper in these turbulent times." 
+
+ salia_nation_title:0 "Unite Salia @SAL"
+ salia_nation_desc:0 "Regnum Saelum, mor commonly known now as Salia, was a brief political entity to effectively manage newly acquired territories in the northern Saelian Empire. Internal fragmentation caused the title to be abandoned. Now it's time to restore it."
+ all_salian_provinces_claims_tt:0 "§Y[Root.GetName]§! gains a permanent claim on all Salish provinces."
