--- a/localisation/TD_01_flavour_argenia_l_english.yml
+++ b/localisation/TD_01_flavour_argenia_l_english.yml
@@ -83,3 +83,6 @@
  wymondian_kingdom_reform:0 "Wymondian Kingdom"
  wymondian_kingdom_reform_desc:0 "In kingdom of Argenia ruler has the power to designate their heir to the throne.1"
  mechanic_disinherit_less_penalty_yes:0 "Disinheriting heirs costs 50% less prestige."
+
+ union_of_beneul_reform:0 "Union of Beneul"
+ union_of_beneul_reform_desc:0 "Union of Beneul was proclaimed after large amounts of nobility from the south fled north to the only unconquered Caidthmorian realm - Nabhin. Seven of the greatest families were granted land and titles, but most of the impoverished nobles had to become their servants."
