--- a/localisation/TD_parliaments_l_english.yml
+++ b/localisation/TD_parliaments_l_english.yml
@@ -2,3 +2,5 @@
 l_english:
  HLR_parliament_name:0 "Imperial Diet"
  zbojaner_group_parliament_name:0 "Wiec"
+ NAB_parliament_name:0 "Cunnadhul"
+ CAT_parliament_name:0 "Cunnadhul"
