--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -48,7 +48,7 @@
  PROV_ADJ47:0 "Rantaniitty"
  PROV_ADJ48:0 "Madave"
  PROV_ADJ49:0 "Lerfeld"
- PROV_ADJ50:0 "Ehrenic Straits"
+ PROV_ADJ50:0 "Ehren Straits"
  PROV_ADJ51:0 "Kalliokylä"
  PROV_ADJ52:0 "Karhukorpi"
  PROV_ADJ53:0 "Karhuvuori"
