--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -48,7 +48,7 @@
  PROV47:0 "Rantaniitty"
  PROV48:0 "Madave"
  PROV49:0 "Lerfeld"
- PROV50:0 "Ehrenic Straits"
+ PROV50:0 "Ehren Straits"
  PROV51:0 "Kalliokylä"
  PROV52:0 "Karhukorpi"
  PROV53:0 "Karhuvuori"
