--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -5,20 +5,20 @@
  ostsee_tradenode:0 "Ostsee"
  limstadt_tradenode:0 "Limstadt"
  magstadt_tradenode:0 "Magstadt"
- nifthem_tradenode:0 "Nifthem"
- ehrenia_tradenode:0 "Ehrenia"
+ nifthem_tradenode:0 "Vetikerk"
+ ehrenia_tradenode:0 "Ehren Straits"
  indrigerland_tradenode:0 "Indrigerland"
- tummland_tradenode:0 "Tummland"
+ tummland_tradenode:0 "Pihlajakivi"
  uzkolia_tradenode:0 "Uzkolia"
  syvametsa_tradenode:0 "Syvämetsä"
- chilverchia_tradenode:0 "Chilverchia"
+ chilverchia_tradenode:0 "Retonoe"
  diavasa_tradenode:0 "Diavasa"
  acerb_tradenode:0 "Acerb"
  dhahabia_tradenode:0 "Dhahabia"
  hamidar_tradenode:0 "Hamidar"
  sedica_tradenode:0 "Sedica"
- western_camaria_tradenode:0 "Middle Patromnis"
- upper_camaria_tradenode:0 "Upper Patromnis"
+ western_camaria_tradenode:0 "Belenno"
+ upper_camaria_tradenode:0 "Bria"
  argenia_tradenode:0 "Argenia"
  dorchia_tradenode:0 "Dorchean Isles"
  mezonian_strait_tradenode:0 "Mezonian Strait"
