--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -28,11 +28,11 @@
  merhaan.6.desc:0 "After our church collapsed because of lack of support, many people were thinking that we would just give up and decide that it isn't worth it. But today we stand victorious above them, our faith is more united than ever and there are no signs that it will ever collapse. Now we can show this wisdom to everyone, not only merhaani people will know about our ways.\n\nNow you can harmonize different faiths."
  merhaan.6.a:0 "United at last"
 
- merhaan.7.t:0 "Church disunited in teachings"
+ merhaan.7.t:0 "Church Disunited in Teachings"
  merhaan.7.desc:0 "We started to assimilate another religion that doesn't have anything common with our faith. Many shamans are now in disarray and don't know what to do, they also try to convince us that we should first focus on bringing our brothers and sisters to enlightenment before we try to teach others."
  merhaan.7.a:0 "Okay"
 
- merhaan.8.t:0 "Shamans united"
+ merhaan.8.t:0 "Shamans United"
  merhaan.8.desc:0 "By stopping our attempts to assimilate other faiths we united shamans once again."
  merhaan.8.a:0 "Okay"
 
@@ -61,7 +61,7 @@
  merhaan.13.a:0 "Let them stay"
  merhaan.13.b:0 "Kick them out"
 
- merhaan.101.t:0 "Shamans request local autonomy"
+ merhaan.101.t:0 "Shamans Request Local Autonomy"
  merhaan.101.desc:0 "They argue that giving autonomy to local population with allow them to better understand their faith. We can give it to them which will speed up process of assimilation or we can decline."
  merhaan.101.a:0 "Give them autonomy"
  merhaan.101.b:0 "Don't grant it"
@@ -71,9 +71,55 @@
  merhaan.102.a:0 "Hire him"
  merhaan.102.b:0 "Send him back"
 
- merhaan.103.t:0 "Traditions in court"
+ merhaan.103.t:0 "Traditions in Court"
  merhaan.103.desc:0 "Some of people in our court started to practice foreign traditions. Allowing them continue will make our state more open to different ways of thinking thus speeding up assimilation but it will make our nation less prestigious."
  merhaan.103.a:0 "Allow them to continue"
  merhaan.103.b:0 "Ban them"
+
+ merhaan.1001.t:0 "Harmonization of Pagan Faiths"
+ merhaan.1001.desc:0 "There are subjects that don't believe in gods of more systematized faiths, instead they are believing in local ghosts, spirits and gods. But our efforts to integrate them into our church changed that, sharing their knowledge of the world with our shamans. Small statues and altars are now more popular in our country and some officials started to honour their traditions."
+ merhaan.1001.a:0 "Closer to truth"
+
+ merhaan.1002.t:0 "Harmonization of Saelian Faiths"
+ merhaan.1002.desc:0 "We heard about this conqueror that united large swaths of land under his rule creating new empire on his continent. Many people believe that he was sent by god and its only him that should rule over the world. In our talks with their local priests we conducted that Saelian must be one of the first humans that were born from Merhaan and was guided by it to create his own domain. Saelius is now being treated as another saint in our faith and discussions between our shamans and saelian priests are more and more popular."
+ merhaan.1002.a:0 "Closer to truth"
+ harmonized_saelian:0 "Harmonized Saelian"
+
+ merhaan.1003.t:0 "Harmonization of Yermic Faiths"
+ merhaan.1003.desc:0 "idk"
+ merhaan.1003.a:0 "Closer to truth"
+ harmonized_yermic:0 "Harmonized Yermic"
+
+ merhaan.1004.t:0 "Harmonization of Samadio-Taedian Faiths"
+ merhaan.1004.desc:0 "Our shamans found out that not everyone living in Taedium believes in authority of Saelius. These faiths were fading away because of mass convertions to Saelianism. Integrating them into our church made us preserve these local faiths and document their knowledge that is unique for them."
+ merhaan.1004.a:0 "Closer to truth"
+ harmonized_samadio_taedian:0 "Harmonized Samadio-Taedian"
+
+ merhaan.1005.t:0 "Harmonization of Anhativaz Faiths"
+ merhaan.1005.desc:0 "idk"
+ merhaan.1005.a:0 "Closer to truth"
+ harmonized_anhativaz:0 "Harmonized Anhativaz"
+
+ merhaan.1006.t:0 "Harmonization of Hestani Faiths"
+ merhaan.1006.desc:0 "idk"
+ merhaan.1006.a:0 "Closer to truth"
+ harmonized_hestani:0 "Harmonized Hestani"
+
+ merhaan.1007.t:0 "Harmonization of Samadian Faiths"
+ merhaan.1007.desc:0 "These faiths are more focused on human ability to interact with spiritual side of the world. It fascinated our shamans that announced that perspective of these people can lead us to new understand of our world. In our lands new places that teach about our spiritual side and how we can reach out to it are becoming more and more common."
+ merhaan.1007.a:0 "Closer to truth"
+ harmonized_samadian:0 "Harmonized Samadian"
+
+ merhaan.1008.t:0 "Harmonization of Wasichantlian Faiths"
+ merhaan.1008.desc:0 "idk"
+ merhaan.1008.a:0 "Closer to truth"
+ harmonized_wasichantliani:0 "Harmonized wWsichantlian"
+
+ merhaan.1009.t:0 "Harmonization of Hengtuan Faiths"
+ merhaan.1009.desc:0 "idk"
+ merhaan.1009.a:0 "Closer to truth"
+ harmonized_hengtuan:0 "Harmonized Hengtuan"
+
+
 
 
