--- a/localisation/TD_01_flavour_merhaan_l_english.yml
+++ b/localisation/TD_01_flavour_merhaan_l_english.yml
@@ -120,6 +120,31 @@
  merhaan.1009.a:0 "Closer to truth"
  harmonized_hengtuan:0 "Harmonized Hengtuan"
 
+ merhaan.1010.t:0 "Harmonization of Orundes"
+ merhaan.1010.desc:0 "Shamans of Orundes are not only trying to understand already existing world but try to create and understand new things. Now a lot of them work also work as officials and are working to expand our scientific knowledge of the world."
+ merhaan.1010.a:0 "Closer to truth"
+ harmonized_orundes:0 "Harmonized Orundes"
+
+ merhaan.1011.t:0 "Harmonization of Tanagan"
+ merhaan.1011.desc:0 "Conquest and expansion allowed us to spread our faith and kind to far lands. These warriors are protecting our faith and allow it to prosper in peace."
+ merhaan.1011.a:0 "Closer to truth"
+ harmonized_tanagan:0 "Harmonized Tanagan"
+
+ merhaan.1012.t:0 "Harmonization of Navch"
+ merhaan.1012.desc:0 "People following Navch sect were mostly isolated from more popular schools of Merhaan, it allowed them to achieve more unique vision of our faith. Now these people are known to live in isolated communities but sometimes they come out and share their wisdom with us."
+ merhaan.1012.a:0 "Closer to truth"
+ harmonized_navch:0 "Harmonized Navch"
+
+ merhaan.1013.t:0 "Harmonization of Khondii"
+ merhaan.1013.desc:0 "Tree that gave life to first humans isn't with us for a long time. But we still can create new life and allow it to prosper, tree gave us responsibility to spread word about its wisdom. Help for less fortune is getting popular in our lands by propagation of Khondii ideas."
+ merhaan.1013.a:0 "Closer to truth"
+ harmonized_khondii:0 "Harmonized Khondii"
+
+ merhaan.1014.t:0 "Harmonization of Salbar"
+ merhaan.1014.desc:0 "When Merhaan believers were living inside their own communities, a lot of salbarian shamans tried to achieve understanding with people of different culture or faith. Now they are also serving as experienced diplomats that aren't scared of unorthodox traditions."
+ merhaan.1014.a:0 "Closer to truth"
+ harmonized_salbar:0 "Harmonized Salbar"
+
 
 
 
